fixed page alignment

--- a/root/thruk/stylesheets/thruk.css
+++ b/root/thruk/stylesheets/thruk.css
@@ -10,12 +10,17 @@ div.navbarsearch form fieldset {
 }
 
 .pager_direct_link {
+  vertical-align:top;
   font-weight: normal;
   color: #000000;
 }
 .pager_direct_link_current {
+  vertical-align:top;
   font-weight: bold;
   color: #FF6600;
+}
+.pager_input_img {
+  vertical-align:text-bottom;
 }
 
 /* fix for link box and infobox border */
